# support

./: .dockerignore  .env  .env.sample  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
backend/: Dockerfile  nginx.conf  pyproject.toml
backend/core/: asgi.py
backend/core/middleware/: BlacklistTokenMiddleware.py  JWTAuthMiddleware.py  jwt_blacklist.py
backend/message/: admin.py  apps.py  consumers.py  models.py  pagination.py  serializers.py  services.py  signals.py  views.py
backend/notification/: apps.py  consumers.py  models.py
backend/tests/: conftest.py
backend/tests/support/: test_message.py  test_ticket.py  test_user.py
backend/ticket/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
backend/user/: admin.py  apps.py  managers.py  models.py  permissions.py  serializers.py  services.py  urls.py
core/: asgi.py
core/middleware/: jwt_blacklist.py  process.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.js  LoginForm.css  tiketsService.js
message/: admin.py  models.py  serializers.py  services.py  views.py
notification/: consumers.py  models.py
support/: .my_pgpass  celeryy.py  pg_service.conf  settings.py  urls.py
tests/: conftest.py
tests/support/: test_message.py  test_ticket.py  (+1 more)
ticket/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
user/: admin.py  apps.py  exections.py  managers.py  models.py  permissions.py  serializers.py  services.py  urls.py  utils.py  views.py
(+36 files in other folders)
