[tool.poetry]
name = "Support system"
version = "0.1.0"
description = ""
authors = ["olga.kozintsava <olga.kozintsava@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.7"
djangorestframework = "3.14.0"
celery = "5.2.7"
python-dotenv = "0.21.1"
pytest = "7.2.2"
pytest-django = "4.5.2"
redis = "4.5.2"
drf-yasg = "1.21.5"
djoser = "2.1.0"
psycopg2 = "2.9.5"
djangorestframework-simplejwt = "4.8.0"
social-auth-app-django = "4.0.0"
flake8 = "6.0.0"
django-redis = "5.2.0"
pillow = "^9.5.0"
django-debug-toolbar = "^4.0.0"
channels = "^4.0.0"
channels-redis = "4.0.0"
daphne = "^4.0.0"
websocket = "^0.2.1"
django-cors-headers = "^3.14.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
